--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    font_awesome_flutter: <latest_version>
 
 
   # The following adds the Cupertino Icons font to your application.
